Fix spacing issue on contact cards

--- a/base/_base.scss
+++ b/base/_base.scss
@@ -1249,6 +1249,7 @@ a.card-double:active {
 
     p {
       margin: 0;
+      padding-bottom: 0;
       text-align: center;
     }
   }
